--- a/www/partials/menu.html
+++ b/www/partials/menu.html
@@ -43,125 +43,69 @@
 					<rect x="665.01" y="27.51" width="569.99" height="2"/>
 				</svg>
 			</div>
-			<div class="create">
-				<h2>Create New Deck</h2>
-				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 132 132"
-					ng-click="menu.goToCreate()">
-					<path d="M62,70.1H51.9v-8.2H62V50.8h8v11.1h10.1v8.2H70v11.1h-8V70.1z"/>
-					<path d="M119,4c5,0,9,4,9,9v106c0,5-4,9-9,9H13c-5,0-9-4-9-9V13c0-5,4-9,9-9H119 M119,0H13C5.8,0,0,5.8,0,13v106
-						c0,7.2,5.8,13,13,13h106c7.2,0,13-5.8,13-13V13C132,5.8,126.2,0,119,0L119,0z"/>
-				</svg>
-			</div>
-			<div class="decks">
-				<h2>Decks</h2>
+			<div class="row">
+				<div class="big-col">
+					<div class="create">
+						<h2>Create New Deck</h2>
+						<button class="button button-clear custom-button"
+								ng-click="menu.goToCreate()">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 132 132"
+								ng-class="{
+									'pulse': !menu.decks.length
+								}">
+								<path d="M62,70.1H51.9v-8.2H62V50.8h8v11.1h10.1v8.2H70v11.1h-8V70.1z"/>
+								<path d="M119,4c5,0,9,4,9,9v106c0,5-4,9-9,9H13c-5,0-9-4-9-9V13c0-5,4-9,9-9H119 M119,0H13C5.8,0,0,5.8,0,13v106
+									c0,7.2,5.8,13,13,13h106c7.2,0,13-5.8,13-13V13C132,5.8,126.2,0,119,0L119,0z"/>
+							</svg>
+						</button>
+					</div>
+					<div class="decks" ng-show="menu.decks.length">
+						<h2>Decks</h2>
 
-				<div class="deck">
-					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 132 148">
-						<path d="M80.9,86.1c-1.8-1-3.5-2-5.3-3c-0.3-0.2-0.5-0.3-0.8-0.5c-0.2-0.1-0.3-0.3-0.1-0.5c0.4-0.7,0.8-1.4,1.1-2.2
-							c0.7-1.6,1-3.3,1.1-5c0.1-1,0.1-2,0-3c-0.2-1.5-0.6-3-1.1-4.4c-1-2.4-2.4-4.4-4.5-6c-1.4-1.1-3-1.8-4.7-2.2
-							c-0.8-0.2-1.6-0.7-2.1-1.3c-1.4-1.6-3-3.1-4.6-4.5c-0.7-0.6-1.4-1.1-2.2-1.5c-1.7-0.9-3.4-0.8-5.1,0c-0.9,0.4-1.8,1-2.5,1.8
-							c0,0-0.1,0.1-0.1,0.1c-0.5,0.6-0.3,1.1,0.5,1.4c0.3,0.1,0.6,0.1,0.8,0.1c0.6,0,1.3,0,1.9,0.1c1,0.1,1.9,0.6,2.7,1.2
-							c0.9,0.8,1.8,1.6,2.5,2.6c0.2,0.2,0.3,0.5,0.4,0.7c0.6,2.3,1.8,4.2,3.3,6c0.5,0.6,1,1.3,1.4,1.9c0.3,0.4,0.6,0.9,0.7,1.5
-							c0.3,0.9,0.1,1.8-0.4,2.7c-0.3,0.6-0.8,1.1-1.2,1.5c-0.2,0.2-0.2,0-0.3,0c-1.5-1.3-3-2.6-4.5-3.9c-3.6-3.3-7-6.7-10.1-10.5
-							c-1-1.2-1.9-2.4-2.8-3.7c-0.1-0.1-0.1-0.1-0.2-0.3c-0.1,0.1-0.1,0.3-0.2,0.4c-0.3,0.8-0.6,1.6-0.9,2.4c0,0.2,0,0.3,0.1,0.4
-							c4.8,6.1,10,11.7,16,16.7c0.1,0.1,0.3,0.3,0.4,0.4c0.1,0.1,0.1,0.2,0,0.3c-0.5,0.4-0.9,0.9-1.3,1.3c-2.4,2.3-4.9,4.5-7.4,6.7
-							c-0.6,0.5-0.6,0.5-1.1,0c-1.4-1.4-2.8-2.8-3.8-4.5c-1.9-2.9-3.2-6-3.8-9.4c-0.7-3.8-0.5-7.5,0.6-11.3c0.1-0.2,0-0.4-0.1-0.6
-							c-1.3-1.9-2.6-3.8-3.6-5.8c-0.7-1.3-1.2-2.7-1.5-4.2c-0.1-1-0.1-1.9,0.3-2.8c0.5-0.9,1.3-1.4,2.3-1.6c1.1-0.2,2.3-0.1,3.4,0.1
-							c2,0.4,3.9,1.1,5.8,1.9c0.5,0.2,1,0.4,1.5,0.7c0.2,0.1,0.3,0.1,0.5-0.1c2.5-1.9,5.3-3.3,8.3-4.2c2.4-0.7,4.9-1,7.5-0.9
-							c3.8,0.1,7.5,1.1,10.9,2.9c3.1,1.6,5.7,3.8,7.9,6.6c1.9,2.5,3.3,5.3,4.2,8.3c0.9,3,1.2,6,0.9,9.1c-0.3,3.3-1.3,6.5-2.8,9.4
-							c-0.1,0.2-0.1,0.3,0,0.4c1,1.6,2.1,3.2,2.9,4.9c0.6,1.3,1.1,2.6,1.4,4c0.2,1.1,0.2,2.2-0.5,3.2c-0.4,0.7-1.1,1.1-1.9,1.3
-							c-1.3,0.3-2.7,0.2-4-0.1c-2.5-0.5-4.8-1.5-7.1-2.5c-0.4-0.2-0.9-0.4-1.3-0.6c-0.2-0.1-0.3-0.1-0.5,0c-1.8,0.8-3.6,1.4-5.5,1.9
-							c-1.8,0.4-3.7,0.6-5.5,0.5C66.9,90,67,90,67,90c1.8-1.8,3.7-3.6,5.5-5.4c0.2-0.2,0.3-0.2,0.4,0c1.6,1.1,3.3,2,5.1,2.9
-							c0.2,0.1,0.3,0.1,0.4,0C79.3,87.1,80,86.6,80.9,86.1z M87.7,58.9c0-0.6-0.1-0.8-0.4-1.2c-0.5-0.7-1.1-1.4-1.8-2
-							c-0.7-0.6-2-0.6-2.8-0.1c-1.3,1-2.6,2.1-3.9,3.2c-0.7,0.6-1.5,1.2-2.1,1.9c-0.8,0.8-1,2-0.4,2.9c0.5,0.8,1.1,1.5,1.8,2.1
-							c0.8,0.7,2.1,0.7,2.9,0.1c0.5-0.4,0.9-0.7,1.3-1.1c1.6-1.3,3.2-2.6,4.6-4C87.5,60.2,87.7,59.6,87.7,58.9z M75.1,60.2
-							c0.6,0,1.2-0.1,1.6-0.5c2.1-1.7,4.1-3.3,6-5.2c0.7-0.6,0.8-2,0.3-2.8c-0.5-0.8-1.2-1.6-2-2.2c-0.7-0.6-2-0.5-2.6,0
-							c-0.6,0.5-1.2,1-1.8,1.5c-1.5,1.2-2.9,2.4-4.3,3.8c-0.7,0.7-0.8,1.9-0.4,2.6c0.5,0.9,1.2,1.7,2,2.3C74.3,60.1,74.7,60.2,75.1,60.2z
-							 M81,86.2c1.8,0.8,3.5,1.6,5.4,2.1c1,0.2,2,0.4,3,0.3c1-0.1,1.7-0.8,1.8-1.8c0.1-0.6,0-1.2-0.2-1.8c-0.6-2.1-1.7-3.8-2.9-5.6
-							c-0.2-0.2-0.2-0.2-0.4,0c-1.3,2-3,3.8-4.9,5.4C82.3,85.2,81.7,85.7,81,86.2z M88.6,67.8c0-0.6-0.1-1-0.4-1.4
-							c-0.5-0.7-1.1-1.3-1.7-1.9c-0.6-0.5-1.9-0.6-2.5-0.2c-1.2,0.9-2.3,1.8-3.3,2.9c-0.8,0.8-0.8,1.9-0.2,2.9c0.3,0.6,0.8,1,1.2,1.5
-							c1.1,1.2,2.5,1,3.5,0.2c0.9-0.8,1.8-1.6,2.7-2.4C88.4,69,88.6,68.4,88.6,67.8z M50.4,47.5c-0.5-0.2-0.9-0.4-1.4-0.6
-							c-1.7-0.7-3.5-1.2-5.3-1.1c-1.1,0.1-1.9,0.8-1.9,1.9c0,0.8,0.1,1.7,0.4,2.4c0.6,1.8,1.6,3.3,2.6,4.9c0,0,0,0,0.1,0
-							C46.2,52.2,48.1,49.7,50.4,47.5z"/>
-					<path d="M118.8,0h-106c-7.2,0-13,5.8-13,13v77.4V119v8v8c0,7.2,5.8,13,13,13h106c7.2,0,13-5.8,13-13v-8v-8V90.4V13
-						C131.8,5.8,126,0,118.8,0z M118.8,144h-106c-4.5,0-8.2-3.3-8.9-7.5c2.3,2.2,5.4,3.5,8.9,3.5h106c3.4,0,6.5-1.3,8.9-3.5
-						C127,140.7,123.3,144,118.8,144z M4,128.5c2.3,2.2,5.4,3.5,8.9,3.5h106c3.4,0,6.5-1.3,8.9-3.5c-0.7,4.3-4.4,7.5-8.9,7.5h-106
-						C8.4,136,4.7,132.7,4,128.5z M127.8,119c0,5-4,9-9,9h-106c-5,0-9-4-9-9V90.4V13c0-5,4-9,9-9h106c5,0,9,4,9,9v77.4V119z"/>
-					</svg>
-					<br>
-					History
+						<div class="deck"
+							ng-repeat="deck in menu.decks track by $index">
+							<button class="button button-clear custom-button"
+								ng-click="menu.goToQuiz($index)">
+								<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 132 148">
+									<path d="M80.9,86.1c-1.8-1-3.5-2-5.3-3c-0.3-0.2-0.5-0.3-0.8-0.5c-0.2-0.1-0.3-0.3-0.1-0.5c0.4-0.7,0.8-1.4,1.1-2.2
+										c0.7-1.6,1-3.3,1.1-5c0.1-1,0.1-2,0-3c-0.2-1.5-0.6-3-1.1-4.4c-1-2.4-2.4-4.4-4.5-6c-1.4-1.1-3-1.8-4.7-2.2
+										c-0.8-0.2-1.6-0.7-2.1-1.3c-1.4-1.6-3-3.1-4.6-4.5c-0.7-0.6-1.4-1.1-2.2-1.5c-1.7-0.9-3.4-0.8-5.1,0c-0.9,0.4-1.8,1-2.5,1.8
+										c0,0-0.1,0.1-0.1,0.1c-0.5,0.6-0.3,1.1,0.5,1.4c0.3,0.1,0.6,0.1,0.8,0.1c0.6,0,1.3,0,1.9,0.1c1,0.1,1.9,0.6,2.7,1.2
+										c0.9,0.8,1.8,1.6,2.5,2.6c0.2,0.2,0.3,0.5,0.4,0.7c0.6,2.3,1.8,4.2,3.3,6c0.5,0.6,1,1.3,1.4,1.9c0.3,0.4,0.6,0.9,0.7,1.5
+										c0.3,0.9,0.1,1.8-0.4,2.7c-0.3,0.6-0.8,1.1-1.2,1.5c-0.2,0.2-0.2,0-0.3,0c-1.5-1.3-3-2.6-4.5-3.9c-3.6-3.3-7-6.7-10.1-10.5
+										c-1-1.2-1.9-2.4-2.8-3.7c-0.1-0.1-0.1-0.1-0.2-0.3c-0.1,0.1-0.1,0.3-0.2,0.4c-0.3,0.8-0.6,1.6-0.9,2.4c0,0.2,0,0.3,0.1,0.4
+										c4.8,6.1,10,11.7,16,16.7c0.1,0.1,0.3,0.3,0.4,0.4c0.1,0.1,0.1,0.2,0,0.3c-0.5,0.4-0.9,0.9-1.3,1.3c-2.4,2.3-4.9,4.5-7.4,6.7
+										c-0.6,0.5-0.6,0.5-1.1,0c-1.4-1.4-2.8-2.8-3.8-4.5c-1.9-2.9-3.2-6-3.8-9.4c-0.7-3.8-0.5-7.5,0.6-11.3c0.1-0.2,0-0.4-0.1-0.6
+										c-1.3-1.9-2.6-3.8-3.6-5.8c-0.7-1.3-1.2-2.7-1.5-4.2c-0.1-1-0.1-1.9,0.3-2.8c0.5-0.9,1.3-1.4,2.3-1.6c1.1-0.2,2.3-0.1,3.4,0.1
+										c2,0.4,3.9,1.1,5.8,1.9c0.5,0.2,1,0.4,1.5,0.7c0.2,0.1,0.3,0.1,0.5-0.1c2.5-1.9,5.3-3.3,8.3-4.2c2.4-0.7,4.9-1,7.5-0.9
+										c3.8,0.1,7.5,1.1,10.9,2.9c3.1,1.6,5.7,3.8,7.9,6.6c1.9,2.5,3.3,5.3,4.2,8.3c0.9,3,1.2,6,0.9,9.1c-0.3,3.3-1.3,6.5-2.8,9.4
+										c-0.1,0.2-0.1,0.3,0,0.4c1,1.6,2.1,3.2,2.9,4.9c0.6,1.3,1.1,2.6,1.4,4c0.2,1.1,0.2,2.2-0.5,3.2c-0.4,0.7-1.1,1.1-1.9,1.3
+										c-1.3,0.3-2.7,0.2-4-0.1c-2.5-0.5-4.8-1.5-7.1-2.5c-0.4-0.2-0.9-0.4-1.3-0.6c-0.2-0.1-0.3-0.1-0.5,0c-1.8,0.8-3.6,1.4-5.5,1.9
+										c-1.8,0.4-3.7,0.6-5.5,0.5C66.9,90,67,90,67,90c1.8-1.8,3.7-3.6,5.5-5.4c0.2-0.2,0.3-0.2,0.4,0c1.6,1.1,3.3,2,5.1,2.9
+										c0.2,0.1,0.3,0.1,0.4,0C79.3,87.1,80,86.6,80.9,86.1z M87.7,58.9c0-0.6-0.1-0.8-0.4-1.2c-0.5-0.7-1.1-1.4-1.8-2
+										c-0.7-0.6-2-0.6-2.8-0.1c-1.3,1-2.6,2.1-3.9,3.2c-0.7,0.6-1.5,1.2-2.1,1.9c-0.8,0.8-1,2-0.4,2.9c0.5,0.8,1.1,1.5,1.8,2.1
+										c0.8,0.7,2.1,0.7,2.9,0.1c0.5-0.4,0.9-0.7,1.3-1.1c1.6-1.3,3.2-2.6,4.6-4C87.5,60.2,87.7,59.6,87.7,58.9z M75.1,60.2
+										c0.6,0,1.2-0.1,1.6-0.5c2.1-1.7,4.1-3.3,6-5.2c0.7-0.6,0.8-2,0.3-2.8c-0.5-0.8-1.2-1.6-2-2.2c-0.7-0.6-2-0.5-2.6,0
+										c-0.6,0.5-1.2,1-1.8,1.5c-1.5,1.2-2.9,2.4-4.3,3.8c-0.7,0.7-0.8,1.9-0.4,2.6c0.5,0.9,1.2,1.7,2,2.3C74.3,60.1,74.7,60.2,75.1,60.2z
+										 M81,86.2c1.8,0.8,3.5,1.6,5.4,2.1c1,0.2,2,0.4,3,0.3c1-0.1,1.7-0.8,1.8-1.8c0.1-0.6,0-1.2-0.2-1.8c-0.6-2.1-1.7-3.8-2.9-5.6
+										c-0.2-0.2-0.2-0.2-0.4,0c-1.3,2-3,3.8-4.9,5.4C82.3,85.2,81.7,85.7,81,86.2z M88.6,67.8c0-0.6-0.1-1-0.4-1.4
+										c-0.5-0.7-1.1-1.3-1.7-1.9c-0.6-0.5-1.9-0.6-2.5-0.2c-1.2,0.9-2.3,1.8-3.3,2.9c-0.8,0.8-0.8,1.9-0.2,2.9c0.3,0.6,0.8,1,1.2,1.5
+										c1.1,1.2,2.5,1,3.5,0.2c0.9-0.8,1.8-1.6,2.7-2.4C88.4,69,88.6,68.4,88.6,67.8z M50.4,47.5c-0.5-0.2-0.9-0.4-1.4-0.6
+										c-1.7-0.7-3.5-1.2-5.3-1.1c-1.1,0.1-1.9,0.8-1.9,1.9c0,0.8,0.1,1.7,0.4,2.4c0.6,1.8,1.6,3.3,2.6,4.9c0,0,0,0,0.1,0
+										C46.2,52.2,48.1,49.7,50.4,47.5z"/>
+								<path d="M118.8,0h-106c-7.2,0-13,5.8-13,13v77.4V119v8v8c0,7.2,5.8,13,13,13h106c7.2,0,13-5.8,13-13v-8v-8V90.4V13
+									C131.8,5.8,126,0,118.8,0z M118.8,144h-106c-4.5,0-8.2-3.3-8.9-7.5c2.3,2.2,5.4,3.5,8.9,3.5h106c3.4,0,6.5-1.3,8.9-3.5
+									C127,140.7,123.3,144,118.8,144z M4,128.5c2.3,2.2,5.4,3.5,8.9,3.5h106c3.4,0,6.5-1.3,8.9-3.5c-0.7,4.3-4.4,7.5-8.9,7.5h-106
+									C8.4,136,4.7,132.7,4,128.5z M127.8,119c0,5-4,9-9,9h-106c-5,0-9-4-9-9V90.4V13c0-5,4-9,9-9h106c5,0,9,4,9,9v77.4V119z"/>
+								</svg>
+							</button>
+							<br>
+							{{deck.name}}
+						</div>
+					</div>
 				</div>
-				<div class="deck">
-					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 132 148">
-						<path d="M80.9,86.1c-1.8-1-3.5-2-5.3-3c-0.3-0.2-0.5-0.3-0.8-0.5c-0.2-0.1-0.3-0.3-0.1-0.5c0.4-0.7,0.8-1.4,1.1-2.2
-							c0.7-1.6,1-3.3,1.1-5c0.1-1,0.1-2,0-3c-0.2-1.5-0.6-3-1.1-4.4c-1-2.4-2.4-4.4-4.5-6c-1.4-1.1-3-1.8-4.7-2.2
-							c-0.8-0.2-1.6-0.7-2.1-1.3c-1.4-1.6-3-3.1-4.6-4.5c-0.7-0.6-1.4-1.1-2.2-1.5c-1.7-0.9-3.4-0.8-5.1,0c-0.9,0.4-1.8,1-2.5,1.8
-							c0,0-0.1,0.1-0.1,0.1c-0.5,0.6-0.3,1.1,0.5,1.4c0.3,0.1,0.6,0.1,0.8,0.1c0.6,0,1.3,0,1.9,0.1c1,0.1,1.9,0.6,2.7,1.2
-							c0.9,0.8,1.8,1.6,2.5,2.6c0.2,0.2,0.3,0.5,0.4,0.7c0.6,2.3,1.8,4.2,3.3,6c0.5,0.6,1,1.3,1.4,1.9c0.3,0.4,0.6,0.9,0.7,1.5
-							c0.3,0.9,0.1,1.8-0.4,2.7c-0.3,0.6-0.8,1.1-1.2,1.5c-0.2,0.2-0.2,0-0.3,0c-1.5-1.3-3-2.6-4.5-3.9c-3.6-3.3-7-6.7-10.1-10.5
-							c-1-1.2-1.9-2.4-2.8-3.7c-0.1-0.1-0.1-0.1-0.2-0.3c-0.1,0.1-0.1,0.3-0.2,0.4c-0.3,0.8-0.6,1.6-0.9,2.4c0,0.2,0,0.3,0.1,0.4
-							c4.8,6.1,10,11.7,16,16.7c0.1,0.1,0.3,0.3,0.4,0.4c0.1,0.1,0.1,0.2,0,0.3c-0.5,0.4-0.9,0.9-1.3,1.3c-2.4,2.3-4.9,4.5-7.4,6.7
-							c-0.6,0.5-0.6,0.5-1.1,0c-1.4-1.4-2.8-2.8-3.8-4.5c-1.9-2.9-3.2-6-3.8-9.4c-0.7-3.8-0.5-7.5,0.6-11.3c0.1-0.2,0-0.4-0.1-0.6
-							c-1.3-1.9-2.6-3.8-3.6-5.8c-0.7-1.3-1.2-2.7-1.5-4.2c-0.1-1-0.1-1.9,0.3-2.8c0.5-0.9,1.3-1.4,2.3-1.6c1.1-0.2,2.3-0.1,3.4,0.1
-							c2,0.4,3.9,1.1,5.8,1.9c0.5,0.2,1,0.4,1.5,0.7c0.2,0.1,0.3,0.1,0.5-0.1c2.5-1.9,5.3-3.3,8.3-4.2c2.4-0.7,4.9-1,7.5-0.9
-							c3.8,0.1,7.5,1.1,10.9,2.9c3.1,1.6,5.7,3.8,7.9,6.6c1.9,2.5,3.3,5.3,4.2,8.3c0.9,3,1.2,6,0.9,9.1c-0.3,3.3-1.3,6.5-2.8,9.4
-							c-0.1,0.2-0.1,0.3,0,0.4c1,1.6,2.1,3.2,2.9,4.9c0.6,1.3,1.1,2.6,1.4,4c0.2,1.1,0.2,2.2-0.5,3.2c-0.4,0.7-1.1,1.1-1.9,1.3
-							c-1.3,0.3-2.7,0.2-4-0.1c-2.5-0.5-4.8-1.5-7.1-2.5c-0.4-0.2-0.9-0.4-1.3-0.6c-0.2-0.1-0.3-0.1-0.5,0c-1.8,0.8-3.6,1.4-5.5,1.9
-							c-1.8,0.4-3.7,0.6-5.5,0.5C66.9,90,67,90,67,90c1.8-1.8,3.7-3.6,5.5-5.4c0.2-0.2,0.3-0.2,0.4,0c1.6,1.1,3.3,2,5.1,2.9
-							c0.2,0.1,0.3,0.1,0.4,0C79.3,87.1,80,86.6,80.9,86.1z M87.7,58.9c0-0.6-0.1-0.8-0.4-1.2c-0.5-0.7-1.1-1.4-1.8-2
-							c-0.7-0.6-2-0.6-2.8-0.1c-1.3,1-2.6,2.1-3.9,3.2c-0.7,0.6-1.5,1.2-2.1,1.9c-0.8,0.8-1,2-0.4,2.9c0.5,0.8,1.1,1.5,1.8,2.1
-							c0.8,0.7,2.1,0.7,2.9,0.1c0.5-0.4,0.9-0.7,1.3-1.1c1.6-1.3,3.2-2.6,4.6-4C87.5,60.2,87.7,59.6,87.7,58.9z M75.1,60.2
-							c0.6,0,1.2-0.1,1.6-0.5c2.1-1.7,4.1-3.3,6-5.2c0.7-0.6,0.8-2,0.3-2.8c-0.5-0.8-1.2-1.6-2-2.2c-0.7-0.6-2-0.5-2.6,0
-							c-0.6,0.5-1.2,1-1.8,1.5c-1.5,1.2-2.9,2.4-4.3,3.8c-0.7,0.7-0.8,1.9-0.4,2.6c0.5,0.9,1.2,1.7,2,2.3C74.3,60.1,74.7,60.2,75.1,60.2z
-							 M81,86.2c1.8,0.8,3.5,1.6,5.4,2.1c1,0.2,2,0.4,3,0.3c1-0.1,1.7-0.8,1.8-1.8c0.1-0.6,0-1.2-0.2-1.8c-0.6-2.1-1.7-3.8-2.9-5.6
-							c-0.2-0.2-0.2-0.2-0.4,0c-1.3,2-3,3.8-4.9,5.4C82.3,85.2,81.7,85.7,81,86.2z M88.6,67.8c0-0.6-0.1-1-0.4-1.4
-							c-0.5-0.7-1.1-1.3-1.7-1.9c-0.6-0.5-1.9-0.6-2.5-0.2c-1.2,0.9-2.3,1.8-3.3,2.9c-0.8,0.8-0.8,1.9-0.2,2.9c0.3,0.6,0.8,1,1.2,1.5
-							c1.1,1.2,2.5,1,3.5,0.2c0.9-0.8,1.8-1.6,2.7-2.4C88.4,69,88.6,68.4,88.6,67.8z M50.4,47.5c-0.5-0.2-0.9-0.4-1.4-0.6
-							c-1.7-0.7-3.5-1.2-5.3-1.1c-1.1,0.1-1.9,0.8-1.9,1.9c0,0.8,0.1,1.7,0.4,2.4c0.6,1.8,1.6,3.3,2.6,4.9c0,0,0,0,0.1,0
-							C46.2,52.2,48.1,49.7,50.4,47.5z"/>
-					<path d="M118.8,0h-106c-7.2,0-13,5.8-13,13v77.4V119v8v8c0,7.2,5.8,13,13,13h106c7.2,0,13-5.8,13-13v-8v-8V90.4V13
-						C131.8,5.8,126,0,118.8,0z M118.8,144h-106c-4.5,0-8.2-3.3-8.9-7.5c2.3,2.2,5.4,3.5,8.9,3.5h106c3.4,0,6.5-1.3,8.9-3.5
-						C127,140.7,123.3,144,118.8,144z M4,128.5c2.3,2.2,5.4,3.5,8.9,3.5h106c3.4,0,6.5-1.3,8.9-3.5c-0.7,4.3-4.4,7.5-8.9,7.5h-106
-						C8.4,136,4.7,132.7,4,128.5z M127.8,119c0,5-4,9-9,9h-106c-5,0-9-4-9-9V90.4V13c0-5,4-9,9-9h106c5,0,9,4,9,9v77.4V119z"/>
-					</svg>
-					<br>
-					History
-				</div>
-				<div class="deck">
-					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 132 148">
-						<path d="M80.9,86.1c-1.8-1-3.5-2-5.3-3c-0.3-0.2-0.5-0.3-0.8-0.5c-0.2-0.1-0.3-0.3-0.1-0.5c0.4-0.7,0.8-1.4,1.1-2.2
-							c0.7-1.6,1-3.3,1.1-5c0.1-1,0.1-2,0-3c-0.2-1.5-0.6-3-1.1-4.4c-1-2.4-2.4-4.4-4.5-6c-1.4-1.1-3-1.8-4.7-2.2
-							c-0.8-0.2-1.6-0.7-2.1-1.3c-1.4-1.6-3-3.1-4.6-4.5c-0.7-0.6-1.4-1.1-2.2-1.5c-1.7-0.9-3.4-0.8-5.1,0c-0.9,0.4-1.8,1-2.5,1.8
-							c0,0-0.1,0.1-0.1,0.1c-0.5,0.6-0.3,1.1,0.5,1.4c0.3,0.1,0.6,0.1,0.8,0.1c0.6,0,1.3,0,1.9,0.1c1,0.1,1.9,0.6,2.7,1.2
-							c0.9,0.8,1.8,1.6,2.5,2.6c0.2,0.2,0.3,0.5,0.4,0.7c0.6,2.3,1.8,4.2,3.3,6c0.5,0.6,1,1.3,1.4,1.9c0.3,0.4,0.6,0.9,0.7,1.5
-							c0.3,0.9,0.1,1.8-0.4,2.7c-0.3,0.6-0.8,1.1-1.2,1.5c-0.2,0.2-0.2,0-0.3,0c-1.5-1.3-3-2.6-4.5-3.9c-3.6-3.3-7-6.7-10.1-10.5
-							c-1-1.2-1.9-2.4-2.8-3.7c-0.1-0.1-0.1-0.1-0.2-0.3c-0.1,0.1-0.1,0.3-0.2,0.4c-0.3,0.8-0.6,1.6-0.9,2.4c0,0.2,0,0.3,0.1,0.4
-							c4.8,6.1,10,11.7,16,16.7c0.1,0.1,0.3,0.3,0.4,0.4c0.1,0.1,0.1,0.2,0,0.3c-0.5,0.4-0.9,0.9-1.3,1.3c-2.4,2.3-4.9,4.5-7.4,6.7
-							c-0.6,0.5-0.6,0.5-1.1,0c-1.4-1.4-2.8-2.8-3.8-4.5c-1.9-2.9-3.2-6-3.8-9.4c-0.7-3.8-0.5-7.5,0.6-11.3c0.1-0.2,0-0.4-0.1-0.6
-							c-1.3-1.9-2.6-3.8-3.6-5.8c-0.7-1.3-1.2-2.7-1.5-4.2c-0.1-1-0.1-1.9,0.3-2.8c0.5-0.9,1.3-1.4,2.3-1.6c1.1-0.2,2.3-0.1,3.4,0.1
-							c2,0.4,3.9,1.1,5.8,1.9c0.5,0.2,1,0.4,1.5,0.7c0.2,0.1,0.3,0.1,0.5-0.1c2.5-1.9,5.3-3.3,8.3-4.2c2.4-0.7,4.9-1,7.5-0.9
-							c3.8,0.1,7.5,1.1,10.9,2.9c3.1,1.6,5.7,3.8,7.9,6.6c1.9,2.5,3.3,5.3,4.2,8.3c0.9,3,1.2,6,0.9,9.1c-0.3,3.3-1.3,6.5-2.8,9.4
-							c-0.1,0.2-0.1,0.3,0,0.4c1,1.6,2.1,3.2,2.9,4.9c0.6,1.3,1.1,2.6,1.4,4c0.2,1.1,0.2,2.2-0.5,3.2c-0.4,0.7-1.1,1.1-1.9,1.3
-							c-1.3,0.3-2.7,0.2-4-0.1c-2.5-0.5-4.8-1.5-7.1-2.5c-0.4-0.2-0.9-0.4-1.3-0.6c-0.2-0.1-0.3-0.1-0.5,0c-1.8,0.8-3.6,1.4-5.5,1.9
-							c-1.8,0.4-3.7,0.6-5.5,0.5C66.9,90,67,90,67,90c1.8-1.8,3.7-3.6,5.5-5.4c0.2-0.2,0.3-0.2,0.4,0c1.6,1.1,3.3,2,5.1,2.9
-							c0.2,0.1,0.3,0.1,0.4,0C79.3,87.1,80,86.6,80.9,86.1z M87.7,58.9c0-0.6-0.1-0.8-0.4-1.2c-0.5-0.7-1.1-1.4-1.8-2
-							c-0.7-0.6-2-0.6-2.8-0.1c-1.3,1-2.6,2.1-3.9,3.2c-0.7,0.6-1.5,1.2-2.1,1.9c-0.8,0.8-1,2-0.4,2.9c0.5,0.8,1.1,1.5,1.8,2.1
-							c0.8,0.7,2.1,0.7,2.9,0.1c0.5-0.4,0.9-0.7,1.3-1.1c1.6-1.3,3.2-2.6,4.6-4C87.5,60.2,87.7,59.6,87.7,58.9z M75.1,60.2
-							c0.6,0,1.2-0.1,1.6-0.5c2.1-1.7,4.1-3.3,6-5.2c0.7-0.6,0.8-2,0.3-2.8c-0.5-0.8-1.2-1.6-2-2.2c-0.7-0.6-2-0.5-2.6,0
-							c-0.6,0.5-1.2,1-1.8,1.5c-1.5,1.2-2.9,2.4-4.3,3.8c-0.7,0.7-0.8,1.9-0.4,2.6c0.5,0.9,1.2,1.7,2,2.3C74.3,60.1,74.7,60.2,75.1,60.2z
-							 M81,86.2c1.8,0.8,3.5,1.6,5.4,2.1c1,0.2,2,0.4,3,0.3c1-0.1,1.7-0.8,1.8-1.8c0.1-0.6,0-1.2-0.2-1.8c-0.6-2.1-1.7-3.8-2.9-5.6
-							c-0.2-0.2-0.2-0.2-0.4,0c-1.3,2-3,3.8-4.9,5.4C82.3,85.2,81.7,85.7,81,86.2z M88.6,67.8c0-0.6-0.1-1-0.4-1.4
-							c-0.5-0.7-1.1-1.3-1.7-1.9c-0.6-0.5-1.9-0.6-2.5-0.2c-1.2,0.9-2.3,1.8-3.3,2.9c-0.8,0.8-0.8,1.9-0.2,2.9c0.3,0.6,0.8,1,1.2,1.5
-							c1.1,1.2,2.5,1,3.5,0.2c0.9-0.8,1.8-1.6,2.7-2.4C88.4,69,88.6,68.4,88.6,67.8z M50.4,47.5c-0.5-0.2-0.9-0.4-1.4-0.6
-							c-1.7-0.7-3.5-1.2-5.3-1.1c-1.1,0.1-1.9,0.8-1.9,1.9c0,0.8,0.1,1.7,0.4,2.4c0.6,1.8,1.6,3.3,2.6,4.9c0,0,0,0,0.1,0
-							C46.2,52.2,48.1,49.7,50.4,47.5z"/>
-					<path d="M118.8,0h-106c-7.2,0-13,5.8-13,13v77.4V119v8v8c0,7.2,5.8,13,13,13h106c7.2,0,13-5.8,13-13v-8v-8V90.4V13
-						C131.8,5.8,126,0,118.8,0z M118.8,144h-106c-4.5,0-8.2-3.3-8.9-7.5c2.3,2.2,5.4,3.5,8.9,3.5h106c3.4,0,6.5-1.3,8.9-3.5
-						C127,140.7,123.3,144,118.8,144z M4,128.5c2.3,2.2,5.4,3.5,8.9,3.5h106c3.4,0,6.5-1.3,8.9-3.5c-0.7,4.3-4.4,7.5-8.9,7.5h-106
-						C8.4,136,4.7,132.7,4,128.5z M127.8,119c0,5-4,9-9,9h-106c-5,0-9-4-9-9V90.4V13c0-5,4-9,9-9h106c5,0,9,4,9,9v77.4V119z"/>
-					</svg>
-					<br>
-					History
+				<div class="small-col">
+					<img src="img/single-point.png" alt="">
 				</div>
 			</div>
 		</div>
