--- a/www/partials/quiz.html
+++ b/www/partials/quiz.html
@@ -1,7 +1,13 @@
 <ion-pane>
-	<ion-content>
-		<div class="center row">
-			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1235 51"
+  <ion-content>
+  	<div class="column quiz"
+  		ng-class="{
+  			'success': quiz.mode === 'success',
+  			'error': quiz.mode === 'error',
+        'prompt': quiz.mode === 'prompt'
+  		}">
+  		<div class="row">
+  			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1235 51"
   				ng-click="quiz.goBack()">
           <rect y="27.51" width="570.44" height="2" />
               <path  d="M632.62,45.62c-1.8-0.98-3.54-1.97-5.27-2.99c-0.27-0.16-0.52-0.34-0.8-0.49c-0.25-0.13-0.26-0.27-0.13-0.49
@@ -41,114 +47,57 @@
           <rect x="665.01" y="13.51" width="569.99" height="2"/>
           <rect x="665.01" y="27.51" width="569.99" height="2"/>
         </svg>
-			<div ng-if="input.addingDeck"
-				class="deck-form">
-				<h2>Deck Name</h2>
-				<div class="item item-input">
-					<input type="text" placeholder="Type a name ... "
-						ng-model="input.deck.name">
-				</div>
+  		</div>
+		<div class="row">
+			<div class="col big-col">
+	  		<h2 ng-hide="vm.mode === 'prompt'">{{quiz.question.question}}</h2>
+				<h1 ng-hide="vm.mode === 'prompt'">{{quiz.message}}</h1>
 
-				<button class="button button-block"
-					ng-click="input.cancelAddingDeck()">
-					Cancel
-				</button>
-				<button class="button button-block button-balanced"
-					ng-click="input.addDeck()"
-					ng-disabled="!input.deck.name">
-					Add
-				</button>
+        <form ng-show="quiz.mode === 'prompt'">
+          <div class="item item-input">
+            <input type="text" placeholder="Guess an answer ... "
+              ng-model="quiz.answer">
+            <i class="icon ion-mic-a"
+              ng-click="quiz.speech($event)">
+            </i>
+          </div>
+
+          <button class="button button-clear button-balanced"
+            ng-disabled="!quiz.answer"
+            ng-click="quiz.guess()">
+            Guess
+          </button>
+        </form>
+
+				<div class="actions"
+          ng-show="quiz.mode !== 'prompt'">
+					<button class="button icon ion-chevron-left button-clear"
+            ng-show="quiz.currentQuestionId !== 0"
+            ng-click="quiz.toPreviousQuestion()">
+					</button>
+					<button class="button button-clear"
+						ng-if="quiz.mode === 'success'">
+						Learn More
+					</button>
+          <button class="button button-clear"
+            ng-if="quiz.mode === 'error'"
+            ng-click="quiz.retry()">
+            Try Again
+          </button>
+          <button class="button button-clear"
+            ng-click="quiz.done()">
+            Done
+          </button>
+					<buton class="button icon ion-chevron-right button-clear"
+            ng-show="quiz.currentQuestionId + 1 < quiz.deck.questions.length"
+            ng-click="quiz.toNextQuestion()">
+					</buton>
+				</div>
 			</div>
-			<div class="flip card" ng-if="!input.addingDeck"
-				ng-class="{
-					'flipped': input.addingAnswer
-				}">
-
-				<div class="front">
-					<div class="title">
-						<b>Deck Name</b> - {{input.deck.name}}
-					</div>
-					<button class="previous button button-clear icon
-						ion-chevron-left"
-						ng-click="input.toPreviousQuestion()"
-						ng-hide="input.currentQuestionId === 0">
-					</button>
-					<button class="next button button-clear icon
-						ion-chevron-right"
-						ng-click="input.toNextQuestionId()"
-						ng-hide="input.currentQuestionId === input.deck.questions.length">
-					</button>
-					<button class="done button button-clear button-balanced"
-						ng-show="input.deck.questions.length"
-						ng-click="input.done()">
-						<i class="icon ion-checkmark"></i>
-						Done
-					</button>
-					<h2>Question</h2>
-					<div class="item item-input">
-						<i class="icon ion-camera"
-							ng-click="input.takePicture($event)">
-						</i>
-						<input type="text" placeholder="Type a question ... "
-							ng-model="input.question">
-						<i class="icon ion-mic-a"
-							ng-click="input.speech($event)">
-						</i>
-					</div>
-					<div class="item tabs tabs-secondary tabs-icon-left">
-						<a class="tab-item"
-							ng-click="input.cancelAddingQuestion()">
-							Cancel
-						</button>
-						<a class="tab-item balanced"
-							ng-click="input.goToBackOfCard()"
-							ng-disabled="!input.question"
-							ng-if="input.currentQuestionId === input.deck.questions.length">
-							Add Answer
-						</a>
-						<a class="tab-item balanced"
-							ng-click="input.goToBackOfCard()"
-							ng-disabled="!input.question"
-							ng-if="input.currentQuestionId !== input.deck.questions.length">
-							Update Answer
-						</a>
-					</div>
-				</div>
-
-				<div class="back">
-					<div class="title">
-						{{input.question}}
-					</div>
-					<h2>Answer</h2>
-					<div class="item item-input">
-						<i class="icon ion-camera"
-							ng-click="input.takePicture($event)">
-						</i>
-						<input type="text" placeholder="Type an answer ... "
-							ng-model="input.answer"
-							ng-disabled="!input.question">
-						<i class="icon ion-mic-a"
-							ng-click="input.speech($event)">
-						</i>
-					</div>
-					<div class="item tabs tabs-secondary tabs-icon-left">
-						<a class="tab-item"
-							ng-click="input.goToFrontOfCard()">
-							Cancel
-						</button>
-						<a class="tab-item balanced"
-							ng-click="input.addQuestion()"
-							ng-show="input.currentQuestionId === input.deck.questions.length">
-							Add
-						</a>
-						<a class="tab-item balanced"
-							ng-click="input.addQuestion()"
-							ng-show="input.currentQuestionId !== input.deck.questions.length">
-							Update
-						</a>
-					</div>
-				</div>
+			<div class="col small-col">
+				<img ng-src="{{quiz.imageUrl}}" alt="">
 			</div>
 		</div>
-	</ion-content>
+  	</div>
+  </ion-content>
 </ion-pane>
