--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -7764,6 +7764,9 @@ h1 {
     -moz-flex: 1;
     -ms-flex: 1;
     flex: 1; }
+  .quiz.column .card, .quiz.column .list-inset {
+    height: 160px;
+    overflow: auto; }
   .quiz.column .actions {
     position: absolute;
     bottom: 2px;
@@ -7837,7 +7840,8 @@ h1 {
     -webkit-align-self: center;
     /* Safari 7.0+ */
     align-self: center;
-    width: 70%; }
+    width: 70%;
+    padding: 1em; }
     .center.row > div .icon {
       margin-right: 1em; }
   .center.row > svg {
@@ -7855,7 +7859,7 @@ h1 {
   transition: 0.5s;
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
-  overflow: initial;
+  overflow: visible;
   -webkit-transform-origin: right center;
   transform-origin: right center;
   position: relative;
@@ -7871,7 +7875,7 @@ h1 {
     animation: fadeOut .5s;
     -webkit-animation: fadeOut .5s; }
   .flip.card, .flip.card .front, .flip.card .back {
-    width: 440px;
+    width: 425px;
     height: 220px; }
   .flip.card.flipped {
     transform: translateX(-100%) rotateY(180deg);
@@ -7881,7 +7885,6 @@ h1 {
   .flip.card .front, .flip.card .back {
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
-    padding: 1em;
     position: absolute;
     top: 0;
     left: 0; }
